# sklearn-optimized-lssvr

./: .coveragerc  LICENSE  README.md  README.rst  environment.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml
examples/: data.py  scaling.py  sensitivity.py  simple-example.py  simple.py
optimized_lssvr/: __init__.py  _bases.py  _common.py  _optimized_lssvr.py  _sensitivity.py  _simple_lssvr.py
optimized_lssvr/tests/: test_common.py  test_regressor.py
