[project]
name = "optimized_lssvr"
version = "0.0.1"
description = "Least Squares Support Vector Regression with optimized hyperparameters"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
  {name = "Nico Strasdat", email = "nstrasdat@gmail.com" }
]
dependencies = [
  "numpy",
  "scipy",
  "scikit-learn",
]


[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]