[project]
name = "optimized_lssvr"
version = "0.0.2"
description = "Least Squares Support Vector Regression with optimized hyperparameters"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
  {name = "Nico Strasdat", email = "nstrasdat@gmail.com" }
]
dependencies = [
  "numpy",
  "scipy",
  "scikit-learn",
]
repository = "https://github.com/wotzlaff/sklearn-optimized-lssvr"


[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]